<?xml version="1.0"?>
<package format="2">
  <name>ros_button</name>
  <version>1.0.0</version>
  <description>The button package</description>

  <maintainer email="itssme3000@gmail.com">Joel Klimont</maintainer>

  <license>BSD</license>

  <author email="itssme3000@gmail.com">Joel Klimont</author>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>bebop_msgs</build_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
